# building-blocks

crates/building_blocks_core/: Cargo.toml
crates/building_blocks_search/: Cargo.toml
crates/building_blocks_storage/: Cargo.toml
