[package]
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2018"
keywords = ["voxel"]
license = "MIT"
name = "building_blocks_core"
repository = "https://github.com/bonsairobo/building-blocks"
version = "0.7.0"

description = "The core data types for defining 2D and 3D integer lattices."

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
bytemuck = "1.7"
itertools = "0.10"
morton-encoding = "2.0"
num = "0.4"

# Optional, feature-gated.
cgmath = {version = "0.18", optional = true}
glam = {version = "0.20", optional = true}
mint = {version = "0.5.0", optional = true}
nalgebra = {version = "0.30", optional = true}
sdfu = {version = "0.3", optional = true}
serde = {version = "1.0", features = ["derive"], optional = true}
vox-format = {version = "0.1", optional = true}
