[package]
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2018"
keywords = ["voxel"]
license = "MIT"
name = "building_blocks_search"
repository = "https://github.com/bonsairobo/building-blocks"
version = "0.7.0"

description = "Search algorithms for voxel data."

[package.metadata.docs.rs]
all-features = true

[features]
default = []

ncollide = ["nalgebra", "ncollide3d", "building_blocks_core/nalgebra"]

[dependencies]
indexmap = "1.5"
pathfinding = "3.0"

# Optional, feature-gated
nalgebra = {version = "0.30", optional = true}
ncollide3d = {version = "0.33", optional = true}

building_blocks_core = {path = "../building_blocks_core", version = "0.7.0", default-features = false}
building_blocks_storage = {path = "../building_blocks_storage", version = "0.7.0", default-features = false}

[dev-dependencies]
criterion = "0.3"
# Common code for tests and examples.
utilities = {path = "../utilities"}

[[bench]]
harness = false
name = "find_surface"

[[bench]]
harness = false
name = "flood_fill"
